[project]
name = "llm-app"
version = "0.1.0"
description = "A standard AI app workspace with uv, Ruff, and mypy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[tool.ruff]
cache-dir = ".venv/.ruff_cache"
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # bugbear
    "UP",  # pyupgrade (modern syntax suggestions)
]

[tool.mypy]
cache_dir = ".venv/.mypy_cache"
python_version = "3.13"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
